--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -24,7 +24,17 @@
   left: 700px;
   background-color: white;
   width: 500px;
-  height: 300px;
+  height: 400px;
   border: 3px white solid;  
   border-radius: 10px;
+  opacity:0.8;
+}
+
+.top1 {
+  width: 100%;
+  height: 300px;
+}
+.top2 {
+  width: 100%;
+  text-align: center;
 }
