--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -41,6 +41,17 @@
   height: 100%;
 }
 
+.titleImage {
+  max-height: 80px;
+  width: auto;
+  margin-top: 30px;
+  margin-bottom: 30px;
+}
+
+.titleText {
+  padding-left: 100px;
+}
+
 .postImageDiv {
   height: 100%;
   width: 100%;
